# sphincsplus-py

./: .flake8  1  Dockerfile  README.md  conftest.py  demo.py  docker-compose.yml  docker_run.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarking/: bench.json  bench.py  bench.sh  bench2.py
src/sphincsplus/: __init__.py  __main__.py  adrs.py  dgsp.py  fors.py  hash.py  merkle.py  sphincs.py  tree.py  wots.py
tests/: conftest.py  test_bench.py  test_bench_classical.py  test_bench_mxss.py  test_fors.py  test_novel_bench.py  test_sphincs.py  test_wots.py
tests/expected_outputs/: fixed_wots_signature.txt
