[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphincsplus"
version = "0.1.0"
description = "A python implementation of the Sphincs+ post-quantum signature scheme."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark", "flake8"]
bench = ["pyqrllib"]

[project.scripts]
sphincsplus = "sphincsplus.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sphincsplus"]

[tool.pytest.ini_options]
pythonpath = ["src"]
